--- a/Bullet Hell.html
+++ b/Bullet Hell.html
@@ -27,6 +27,8 @@
   <script src="garbage.js"></script>
   <script src="controls.js"></script>
   <script src="enemy-generation.js"></script>
+  <script src="powerups.js"></script>
+  <script src="utilities.js"></script>
   <script src="engine.js"></script>
 </body>
 
