added tons of powerups

--- a/Bullet Hell.html
+++ b/Bullet Hell.html
@@ -26,7 +26,7 @@
   <script src="bullet.js"></script>
   <script src="garbage.js"></script>
   <script src="controls.js"></script>
-  <script src="enemy-generation.js"></script>
+  <script src="element-generation.js"></script>
   <script src="powerups.js"></script>
   <script src="utilities.js"></script>
   <script src="engine.js"></script>
