--- a/Bullet Hell.html
+++ b/Bullet Hell.html
@@ -6,13 +6,16 @@
   <title>Bullet Hell</title>
   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
   <style>
+    #body {
+      background-color: black
+    }
+
     * {
       padding: 0;
       margin: 0;
     }
 
     canvas {
-      background-image: 'background.png';
       display: block;
       margin: 0 auto;
     }
@@ -21,15 +24,17 @@
 
 <body id="body">
   <script src="data.js"></script>
+  <script src="menu.js"></script>
+  <script src="leaderboard.js"></script>
   <script src="player.js"></script>
   <script src="enemies.js"></script>
   <script src="bullet.js"></script>
-  <script src="garbage.js"></script>
   <script src="controls.js"></script>
   <script src="element-generation.js"></script>
   <script src="powerups.js"></script>
   <script src="utilities.js"></script>
   <script src="engine.js"></script>
+  <script src="initialize.js"></script>
 </body>
 
 </html>
