--- a/Bullet Hell.html
+++ b/Bullet Hell.html
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
   <style>
     #body {
-      background-color: black
+      background-color: black;
+      display: flex
     }
 
     .maintext {
