--- a/index.html.html
+++ b/index.html.html
@@ -38,6 +38,7 @@
 
 <body id="body">
   <script src="data.js"></script>
+  <script src="mapeditor.js"></script>
   <script src="menu.js"></script>
   <script src="leaderboard.js"></script>
   <script src="player.js"></script>
