--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body id="body">
   <script src="data.js"></script>
   <script src="mapeditor.js"></script>
+  <script src="levelselector.js"></script>
   <script src="menu.js"></script>
   <script src="leaderboard.js"></script>
   <script src="player.js"></script>
