--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 </head>
 
 <body id="body">
+  <script src="howler.js"></script>
   <script src="data.js"></script>
   <script src="mapeditor.js"></script>
   <script src="levelselector.js"></script>
