--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
 
 <body id="body">
   <canvas id="canvas" width="300" height="800" style="position: absolute; left: 45%; top: 0; z-index: 0;"></canvas>
-  <!-- <canvas id="gl" width="300" height="800" style="position: absolute; left: 45%; top: 0; z-index: 1;"></canvas> -->
+  <canvas id="gl" width="300" height="800" style="position: absolute; left: 45%; top: 0; z-index: 1;"></canvas>
   <script src="howler.js"></script>
   <script src="data.js"></script>
-
-  <!-- <script src="/three/build/three.js"></script>
-  <script src="3d.js"></script> -->
+  <script src="/three/build/three.js"></script>
+  <script src="3d.js"></script>
   <script src="mapeditor.js"></script>
   <script src="levelselector.js"></script>
   <script src="menu.js"></script>
