--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Star Blaster!</title>
   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap" rel="stylesheet">
   <style>
     #body {
       background-color: black;
@@ -56,6 +57,7 @@
   <script src="leaderboard.js"></script>
   <script src="player.js"></script>
   <script src="enemies.js"></script>
+  <script src="bosses.js"></script>
   <script src="bullet.js"></script>
   <script src="controls.js"></script>
   <script src="element-generation.js"></script>
